create github pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rjd509v3mZ mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rjd509v3mZ mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -96,7 +96,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank You! Your song will be played soon.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3MkKswjjj+3X0DLHom96s0zo/K/DCTJpIGoxXuz+hqLSUPDzV0TI67PwIETIUHxEIQ/Xv6UJCcNr3BLHZSgvCp4eVtrJtJBg46d6JNwQleStwk3cwYYLzn4NEUfBIsL1">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I/qRTk+DM6sz1MNFycXlTz2stRAlIiAvPvIrcXQbpgfy9krTXopDJSXPtGJVoumEoc8LIg9lPmn+GeMi8gXgRMgqKZootaozalVTys2iaISt5VDk0dp/eEe0K8Ifhb2J">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
